Added new indicators. Split the big config file into small ones

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -22,7 +22,7 @@ name = FAO - Statistics Division
 datasource_id = LU
 
 [INDICATORS]
-codes = ["INDICATOR1","INDICATOR2","INDICATOR3","INDICATOR4","INDICATOR5","INDICATOR6","INDICATOR7","INDICATOR8","INDICATOR9","INDICATOR10","INDICATOR11","INDICATOR12","INDICATOR13","INDICATOR14","INDICATOR15","INDICATOR16","INDICATOR17","INDICATOR18","INDICATOR19","INDICATOR20","INDICATOR21","INDICATOR22","INDICATOR23","INDICATOR24","INDICATOR25","INDICATOR26","INDICATOR27","INDICATOR28","INDICATOR29","INDICATOR30","INDICATOR31","INDICATOR32","INDICATOR33","INDICATOR34","INDICATOR35","INDICATOR36"]
+codes = ["INDICATOR1","INDICATOR2","INDICATOR3","INDICATOR4","INDICATOR5","INDICATOR6","INDICATOR7","INDICATOR8","INDICATOR9","INDICATOR11","INDICATOR13","INDICATOR14","INDICATOR15","INDICATOR16","INDICATOR17","INDICATOR18","INDICATOR19","INDICATOR21","INDICATOR22","INDICATOR23","INDICATOR24","INDICATOR25","INDICATOR26","INDICATOR27","INDICATOR31","INDICATOR32","INDICATOR33","INDICATOR34"]
 
 [INDICATOR1]
 id = 6610-5110
@@ -161,23 +161,6 @@ desc_fr = Land under perm. meadows and pastures
 fao_item_code = 6655
 fao_element_code = 5110
 
-[INDICATOR10]
-id = 6671-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Agriculture area under organic agric.
-name_es = Agriculture area under organic agric.
-name_fr = Agriculture area under organic agric.
-desc_en = Agriculture area under organic agric.
-desc_es = Agriculture area under organic agric.
-desc_fr = Agriculture area under organic agric.
-fao_item_code = 6671
-fao_element_code = 5110
-
-
 [INDICATOR11]
 id = 6600-5110
 topic = LAND_USE
@@ -192,23 +175,6 @@ desc_en = Country area
 desc_es = Country area
 desc_fr = Country area
 fao_item_code = 6600
-fao_element_code = 5110
-
-
-[INDICATOR12]
-id = 6611-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Agricultural area actually irrigated
-name_es = Agricultural area actually irrigated
-name_fr = Agricultural area actually irrigated
-desc_en = Agricultural area actually irrigated
-desc_es = Agricultural area actually irrigated
-desc_fr = Agricultural area actually irrigated
-fao_item_code = 6611
 fao_element_code = 5110
 
 [INDICATOR13]
@@ -321,22 +287,6 @@ desc_en = Other land
 desc_es = Other land
 desc_fr = Other land
 fao_item_code = 6670
-fao_element_code = 5110
-
-[INDICATOR20]
-id = 6672-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Agricultural area certified organic
-name_es = Agricultural area certified organic
-name_fr = Agricultural area certified organic
-desc_en = Agricultural area certified organic
-desc_es = Agricultural area certified organic
-desc_fr = Agricultural area certified organic
-fao_item_code = 6672
 fao_element_code = 5110
 
 [INDICATOR21]
@@ -456,58 +406,6 @@ desc_fr = Permanent crops area in conversion to organic
 fao_item_code = 6679
 fao_element_code = 5110
 
-
-[INDICATOR28]
-id = 6680-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Inland waters
-name_es = Inland waters
-name_fr = Inland waters
-desc_en = Inland waters
-desc_es = Inland waters
-desc_fr = Inland waters
-fao_item_code = 6680
-fao_element_code = 5110
-
-
-[INDICATOR29]
-id = 6681-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Permanent meadows & pastures area under organic agriculture
-name_es = Permanent meadows & pastures area under organic agriculture
-name_fr = Permanent meadows & pastures area under organic agriculture
-desc_en = Permanent meadows & pastures area under organic agriculture
-desc_es = Permanent meadows & pastures area under organic agriculture
-desc_fr = Permanent meadows & pastures area under organic agriculture
-fao_item_code = 6681
-fao_element_code = 5110
-
-
-[INDICATOR30]
-id = 6682-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Permanent meadows and pastures area certified organic
-name_es = Permanent meadows and pastures area certified organic
-name_fr = Permanent meadows and pastures area certified organic
-desc_en = Permanent meadows and pastures area certified organic
-desc_es = Permanent meadows and pastures area certified organic
-desc_fr = Permanent meadows and pastures area certified organic
-fao_item_code = 6682
-fao_element_code = 5110
-
-
 [INDICATOR31]
 id = 6683-5110
 topic = LAND_USE
@@ -524,72 +422,7 @@ desc_fr = Permanent meadows and pastures area in conversion to organic
 fao_item_code = 6683
 fao_element_code = 5110
 
-
 [INDICATOR32]
-id = 6690-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Land area equipped for irrigation
-name_es = Land area equipped for irrigation
-name_fr = Land area equipped for irrigation
-desc_en = Land area equipped for irrigation
-desc_es = Land area equipped for irrigation
-desc_fr = Land area equipped for irrigation
-fao_item_code = 6690
-fao_element_code = 5110
-
-[INDICATOR33]
-id = 6714-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Primary forest
-name_es = Primary forest
-name_fr = Primary forest
-desc_en = Primary forest
-desc_es = Primary forest
-desc_fr = Primary forest
-fao_item_code = 6714
-fao_element_code = 5110
-
-[INDICATOR34]
-id = 6716-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Planted forest
-name_es = Planted forest
-name_fr = Planted forest
-desc_en = Planted forest
-desc_es = Planted forest
-desc_fr = Planted forest
-fao_item_code = 6716
-fao_element_code = 5110
-
-[INDICATOR35]
-id = 6717-5110
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Other naturally regenerated forest
-name_es = Other naturally regenerated forest
-name_fr = Other naturally regenerated forest
-desc_en = Other naturally regenerated forest
-desc_es = Other naturally regenerated forest
-desc_fr = Other naturally regenerated forest
-fao_item_code = 6717
-fao_element_code = 5110
-
-[INDICATOR36]
 id = 6774-5110
 topic = LAND_USE
 tendency = INCREASE
@@ -603,4 +436,38 @@ desc_en = Cropland area under protective cover
 desc_es = Cropland area under protective cover
 desc_fr = Cropland area under protective cover
 fao_item_code = 6774
+fao_element_code = 5110
+
+
+[INDICATOR33]
+id = 6602-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Agriculture (Land Use)
+name_es = Agriculture (Land Use)
+name_fr = Agriculture (Land Use)
+desc_en = Agriculture (Land Use)
+desc_es = Agriculture (Land Use)
+desc_fr = Agriculture (Land Use)
+fao_item_code = 6602
+fao_element_code = 5110
+
+
+[INDICATOR34]
+id = 6649-5110
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Land under protective cover
+name_es = Land under protective cover
+name_fr = Land under protective cover
+desc_en = Land under protective cover
+desc_es = Land under protective cover
+desc_fr = Land under protective cover
+fao_item_code = 6649
 fao_element_code = 5110
