updated Land Matrix importer in order to be abe to process new LM XML data

--- a/LandMatrix_Importer/config/configuration.ini
+++ b/LandMatrix_Importer/config/configuration.ini
@@ -1,5 +1,5 @@
 [LAND_MATRIX]
-url_download = http://landmatrix.org/get-the-detail/database.csv?download_format=xml
+url_download = https://landmatrix.org/data/all.xml
 target_file = ./downloaded_data/land_matrix_whole_database_xml.xml
 
 [HISTORICAL]
@@ -34,7 +34,7 @@ name = Creative Commons Attribution-NonComercial-ShareAlike 3.0 Unported (CC BY-
 url = http://creativecommons.org/licenses/by-nc-sa/3.0/7
 
 [INDICATORS]
-codes = ["INDICATOR_N1", "INDICATOR_HA1", "INDICATOR_N2", "INDICATOR_HA2", "INDICATOR_N3", "INDICATOR_HA3", "INDICATOR_N4", "INDICATOR_HA4", "INDICATOR_N5", "INDICATOR_HA5", "INDICATOR_N6", "INDICATOR_HA6", "INDICATOR_N7", "INDICATOR_HA7", "INDICATOR_N8", "INDICATOR_HA8", "INDICATOR_N9", "INDICATOR_HA9", "INDICATOR_N10", "INDICATOR_HA10", "INDICATOR_N11", "INDICATOR_HA11", "INDICATOR_N12", "INDICATOR_HA12", "INDICATOR_N13", "INDICATOR_HA13", "INDICATOR_N14", "INDICATOR_HA14", "INDICATOR_N15", "INDICATOR_HA15", "INDICATOR_N16", "INDICATOR_HA16", "INDICATOR_N17", "INDICATOR_HA17", "INDICATOR_N18", "INDICATOR_HA18", "INDICATOR_N19", "INDICATOR_HA19", "INDICATOR_N20", "INDICATOR_HA20", "INDICATOR_N21", "INDICATOR_HA21"]
+codes = ["INDICATOR_N1", "INDICATOR_HA1", "INDICATOR_N2", "INDICATOR_HA2", "INDICATOR_N3", "INDICATOR_HA3", "INDICATOR_N4", "INDICATOR_HA4", "INDICATOR_N5", "INDICATOR_HA5", "INDICATOR_N6", "INDICATOR_HA6", "INDICATOR_N7", "INDICATOR_HA7", "INDICATOR_N8", "INDICATOR_HA8", "INDICATOR_N9", "INDICATOR_HA9", "INDICATOR_N10", "INDICATOR_HA10", "INDICATOR_N11", "INDICATOR_HA11", "INDICATOR_N12", "INDICATOR_HA12", "INDICATOR_N13", "INDICATOR_HA13", "INDICATOR_N14", "INDICATOR_HA14", "INDICATOR_N15", "INDICATOR_HA15", "INDICATOR_N16", "INDICATOR_HA16", "INDICATOR_N17", "INDICATOR_HA17", "INDICATOR_N18", "INDICATOR_HA18", "INDICATOR_N19", "INDICATOR_HA19", "INDICATOR_N20", "INDICATOR_HA20", "INDICATOR_N21", "INDICATOR_HA21", "INDICATOR_N22", "INDICATOR_HA22", "INDICATOR_N23", "INDICATOR_HA23", "INDICATOR_N24", "INDICATOR_HA24", "INDICATOR_N25", "INDICATOR_HA25"]
 
 [INDICATOR_N1]
 id = N1
@@ -456,3 +456,82 @@ desc_en = No available description.
 desc_es = Ninguna descripcin disponible.
 desc_fr = Aucune description disponible.
 
+[INDICATOR_N22]
+id = N22
+unit = Units
+name_en = Total number of Fodder (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA22]
+id = HA22
+unit = Hectares
+name_en = Total hectares in Fodder (Agriculture) deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_N23]
+id = N23
+unit = Units
+name_en = Total number of Mining deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA23]
+id = HA23
+unit = Hectares
+name_en = Total hectares in Minig deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_N24]
+id = N24
+unit = Units
+name_en = Total number of Land Speculation deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA24]
+id = HA24
+unit = Hectares
+name_en = Total hectares in Land Speculation deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_N25]
+id = N25
+unit = Units
+name_en = Total number of Oil/Gas extraction deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
+
+[INDICATOR_HA25]
+id = HA25
+unit = Hectares
+name_en = Total hectares in Oil/Gas extraction deals
+name_es = FIXME
+name_fr = FIXME
+desc_en = No available description.
+desc_es = Ninguna descripcin disponible.
+desc_fr = Aucune description disponible.
