updated config files for FAO Food security (removed a lot of indicators)

--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
@@ -22,24 +22,9 @@ name = FAO - Statistics Division
 datasource_id = FS
 
 [INDICATORS]
-codes = ["INDICATOR_2","INDICATOR_3","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26","INDICATOR_27","INDICATOR_28","INDICATOR_29","INDICATOR_30"]
+codes = ["INDICATOR_1","INDICATOR_2","INDICATOR_3","INDICATOR_4","INDICATOR_5"]
 
-[INDICATOR_2]
-id = 210041-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Percentage
-unit_type = %
-name_en = Prevalence of undernourishment (%) (3-year average)
-name_es = Prevalence of undernourishment (%) (3-year average)
-name_fr = Prevalence of undernourishment (%) (3-year average)
-desc_en = Prevalence of undernourishment (%) (3-year average)
-desc_es = Prevalence of undernourishment (%) (3-year average)
-desc_fr = Prevalence of undernourishment (%) (3-year average)
-fao_item_code = 210041
-fao_element_code = 6121
-
-[INDICATOR_3]
+[INDICATOR_1]
 id = 22013-6126
 topic = LAND_USE
 tendency = INCREASE
@@ -54,7 +39,7 @@ desc_fr = Gross domestic product per capita, PPP (constant 2011 international $)
 fao_item_code = 22013
 fao_element_code = 6126
 
-[INDICATOR_6]
+[INDICATOR_2]
 id = 210071-6132
 topic = LAND_USE
 tendency = INCREASE
@@ -69,110 +54,7 @@ desc_fr = Number of severely food insecure people (million) (3-year average)
 fao_item_code = 210071
 fao_element_code = 6132
 
-
-[INDICATOR_7]
-id = 21041-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Percentage of children under 5 years of age who are overweight
-name_es = Percentage of children under 5 years of age who are overweight
-name_fr = Percentage of children under 5 years of age who are overweight
-desc_en = Percentage of children under 5 years of age who are overweight
-desc_es = Percentage of children under 5 years of age who are overweight
-desc_fr = Percentage of children under 5 years of age who are overweight
-fao_item_code = 21041
-fao_element_code = 6121
-
-
-[INDICATOR_8]
-id = 21010-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Average dietary energy supply adequacy (%) (3-year average)
-name_es = Average dietary energy supply adequacy (%) (3-year average)
-name_fr = Average dietary energy supply adequacy (%) (3-year average)
-desc_en = Average dietary energy supply adequacy (%) (3-year average)
-desc_es = Average dietary energy supply adequacy (%) (3-year average)
-desc_fr = Average dietary energy supply adequacy (%) (3-year average)
-fao_item_code = 21010
-fao_element_code = 6121
-
-
-[INDICATOR_9]
-id = 21011-6122
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Average value of food production (constant I$ per person) (3-year average)
-name_es = Average value of food production (constant I$ per person) (3-year average)
-name_fr = Average value of food production (constant I$ per person) (3-year average)
-desc_en = Average value of food production (constant I$ per person) (3-year average)
-desc_es = Average value of food production (constant I$ per person) (3-year average)
-desc_fr = Average value of food production (constant I$ per person) (3-year average)
-fao_item_code = 21011
-fao_element_code = 6122
-
-
-[INDICATOR_10]
-id = 21012-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
-name_es = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
-name_fr = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
-desc_en = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
-desc_es = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
-desc_fr = Share of dietary energy supply derived from cereals, roots and tubers (%) (3-year average)
-fao_item_code = 21012
-fao_element_code = 6121
-
-
-[INDICATOR_11]
-id = 21013-6123
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Average protein supply (g/capita/day) (3-year average)
-name_es = Average protein supply (g/capita/day) (3-year average)
-name_fr = Average protein supply (g/capita/day) (3-year average)
-desc_en = Average protein supply (g/capita/day) (3-year average)
-desc_es = Average protein supply (g/capita/day) (3-year average)
-desc_fr = Average protein supply (g/capita/day) (3-year average)
-fao_item_code = 21013
-fao_element_code = 6123
-
-
-[INDICATOR_12]
-id = 21014-6123
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Average supply of protein of animal origin (g/capita/day) (3-year average)
-name_es = Average supply of protein of animal origin (g/capita/day) (3-year average)
-name_fr = Average supply of protein of animal origin (g/capita/day) (3-year average)
-desc_en = Average supply of protein of animal origin (g/capita/day) (3-year average)
-desc_es = Average supply of protein of animal origin (g/capita/day) (3-year average)
-desc_fr = Average supply of protein of animal origin (g/capita/day) (3-year average)
-fao_item_code = 21014
-fao_element_code = 6123
-
-
-[INDICATOR_13]
+[INDICATOR_3]
 id = 21032-6125
 topic = LAND_USE
 tendency = INCREASE
@@ -188,93 +70,7 @@ desc_fr = Political stability and absence of violence/terrorism (index)
 fao_item_code = 21032
 fao_element_code = 6125
 
-
-[INDICATOR_14]
-id = 21043-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Prevalence of anemia among women of reproductive age (15-49 years)
-name_es = Prevalence of anemia among women of reproductive age (15-49 years)
-name_fr = Prevalence of anemia among women of reproductive age (15-49 years)
-desc_en = Prevalence of anemia among women of reproductive age (15-49 years)
-desc_es = Prevalence of anemia among women of reproductive age (15-49 years)
-desc_fr = Prevalence of anemia among women of reproductive age (15-49 years)
-fao_item_code = 21043
-fao_element_code = 6121
-
-
-[INDICATOR_15]
-id = 21016-6124
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Rail-lines density (per 100 square km of land area)
-name_es = Rail-lines density (per 100 square km of land area)
-name_fr = Rail-lines density (per 100 square km of land area)
-desc_en = Rail-lines density (per 100 square km of land area)
-desc_es = Rail-lines density (per 100 square km of land area)
-desc_fr = Rail-lines density (per 100 square km of land area)
-fao_item_code = 21016
-fao_element_code = 6124
-
-
-[INDICATOR_16]
-id = 210011-6132
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Number of people undernourished (million) (3-year average)
-name_es = Number of people undernourished (million) (3-year average)
-name_fr = Number of people undernourished (million) (3-year average)
-desc_en = Number of people undernourished (million) (3-year average)
-desc_es = Number of people undernourished (million) (3-year average)
-desc_fr = Number of people undernourished (million) (3-year average)
-fao_item_code = 210011
-fao_element_code = 6132
-
-
-[INDICATOR_17]
-id = 21044-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Prevalence of exclusive breastfeeding among infants (0-5 months)
-name_es = Prevalence of exclusive breastfeeding among infants (0-5 months)
-name_fr = Prevalence of exclusive breastfeeding among infants (0-5 months)
-desc_en = Prevalence of exclusive breastfeeding among infants (0-5 months)
-desc_es = Prevalence of exclusive breastfeeding among infants (0-5 months)
-desc_fr = Prevalence of exclusive breastfeeding among infants (0-5 months)
-fao_item_code = 21044
-fao_element_code = 6121
-
-
-[INDICATOR_18]
-id = 21035-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Cereal import dependency ratio (%) (3-year average)
-name_es = Cereal import dependency ratio (%) (3-year average)
-name_fr = Cereal import dependency ratio (%) (3-year average)
-desc_en = Cereal import dependency ratio (%) (3-year average)
-desc_es = Cereal import dependency ratio (%) (3-year average)
-desc_fr = Cereal import dependency ratio (%) (3-year average)
-fao_item_code = 21035
-fao_element_code = 6121
-
-
-[INDICATOR_19]
+[INDICATOR_4]
 id = 21034-6121
 topic = LAND_USE
 tendency = INCREASE
@@ -290,110 +86,7 @@ desc_fr = Percentage of arable land equipped for irrigation (%) (3-year average)
 fao_item_code = 21034
 fao_element_code = 6121
 
-
-[INDICATOR_20]
-id = 21033-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Value of food imports over total merchandise exports (%) (3-year average)
-name_es = Value of food imports over total merchandise exports (%) (3-year average)
-name_fr = Value of food imports over total merchandise exports (%) (3-year average)
-desc_en = Value of food imports over total merchandise exports (%) (3-year average)
-desc_es = Value of food imports over total merchandise exports (%) (3-year average)
-desc_fr = Value of food imports over total merchandise exports (%) (3-year average)
-fao_item_code = 21033
-fao_element_code = 6121
-
-
-[INDICATOR_21]
-id = 21042-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Prevalence of obesity in the adult population (18 years and older)
-name_es = Prevalence of obesity in the adult population (18 years and older)
-name_fr = Prevalence of obesity in the adult population (18 years and older)
-desc_en = Prevalence of obesity in the adult population (18 years and older)
-desc_es = Prevalence of obesity in the adult population (18 years and older)
-desc_fr = Prevalence of obesity in the adult population (18 years and older)
-fao_item_code = 21042
-fao_element_code = 6121
-
-
-[INDICATOR_22]
-id = 21030-6127
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Per capita food production variability (I$ per person constant 2004-06)
-name_es = Per capita food production variability (I$ per person constant 2004-06)
-name_fr = Per capita food production variability (I$ per person constant 2004-06)
-desc_en = Per capita food production variability (I$ per person constant 2004-06)
-desc_es = Per capita food production variability (I$ per person constant 2004-06)
-desc_fr = Per capita food production variability (I$ per person constant 2004-06)
-fao_item_code = 21030
-fao_element_code = 6127
-
-
-[INDICATOR_23]
-id = 21031-6128
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Per capita food supply variability (kcal/capita/day)
-name_es = Per capita food supply variability (kcal/capita/day)
-name_fr = Per capita food supply variability (kcal/capita/day)
-desc_en = Per capita food supply variability (kcal/capita/day)
-desc_es = Per capita food supply variability (kcal/capita/day)
-desc_fr = Per capita food supply variability (kcal/capita/day)
-fao_item_code = 21031
-fao_element_code = 6128
-
-
-[INDICATOR_24]
-id = 21026-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Percentage
-unit_type = sq. km
-unit_factor = 10000
-name_en = Percentage of children under 5 years of age affected by wasting (%)
-name_es = Percentage of children under 5 years of age affected by wasting (%)
-name_fr = Percentage of children under 5 years of age affected by wasting (%)
-desc_en = Percentage of children under 5 years of age affected by wasting (%)
-desc_es = Percentage of children under 5 years of age affected by wasting (%)
-desc_fr = Percentage of children under 5 years of age affected by wasting (%)
-fao_item_code = 21026
-fao_element_code = 6121
-
-
-[INDICATOR_25]
-id = 21025-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = sq. km
-unit_factor = 10000
-name_en = Percentage of children under 5 years of age who are stunted (%)
-name_es = Percentage of children under 5 years of age who are stunted (%)
-name_fr = Percentage of children under 5 years of age who are stunted (%)
-desc_en = Percentage of children under 5 years of age who are stunted (%)
-desc_es = Percentage of children under 5 years of age who are stunted (%)
-desc_fr = Percentage of children under 5 years of age who are stunted (%)
-fao_item_code = 21025
-fao_element_code = 6121
-
-
-[INDICATOR_26]
+[INDICATOR_5]
 id = 210401-6121
 topic = LAND_USE
 tendency = INCREASE
@@ -408,65 +101,3 @@ desc_es = Prevalence of severe food insecurity in the total population
 desc_fr = Prevalence of severe food insecurity in the total population
 fao_item_code = 210401
 fao_element_code = 6121
-
-[INDICATOR_27]
-id = 21045-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = %
-name_en = Percentage of population using safely managed drinking water services (%)
-name_es = Percentage of population using safely managed drinking water services (%)
-name_fr = Percentage of population using safely managed drinking water services (%)
-desc_en = Percentage of population using safely managed drinking water services (%)
-desc_es = Percentage of population using safely managed drinking water services (%)
-desc_fr = Percentage of population using safely managed drinking water services (%)
-fao_item_code = 21045
-fao_element_code = 6121
-
-[INDICATOR_28]
-id = 21046-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = %
-name_en = Percentage of population using safely managed sanitation services (%)
-name_es = Percentage of population using safely managed sanitation services (%)
-name_fr = Percentage of population using safely managed sanitation services (%)
-desc_en = Percentage of population using safely managed sanitation services (%)
-desc_es = Percentage of population using safely managed sanitation services (%)
-desc_fr = Percentage of population using safely managed sanitation services (%)
-fao_item_code = 21046
-fao_element_code = 6121
-
-[INDICATOR_29]
-id = 21047-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = %
-name_en = Percentage of population using at least basic drinking water services (%)
-name_es = Percentage of population using at least basic drinking water services (%)
-name_fr = Percentage of population using at least basic drinking water services (%)
-desc_en = Percentage of population using at least basic drinking water services (%)
-desc_es = Percentage of population using at least basic drinking water services (%)
-desc_fr = Percentage of population using at least basic drinking water services (%)
-fao_item_code = 21047
-fao_element_code = 6121
-
-
-[INDICATOR_30]
-id = 21048-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Hectares
-unit_type = %
-name_en = Percentage of population using at least basic sanitation services (%)
-name_es = Percentage of population using at least basic sanitation services (%)
-name_fr = Percentage of population using at least basic sanitation services (%)
-desc_en = Percentage of population using at least basic sanitation services (%)
-desc_es = Percentage of population using at least basic sanitation services (%)
-desc_fr = Percentage of population using at least basic sanitation services (%)
-fao_item_code = 21048
-fao_element_code = 6121
-
